--- a/webapp/view/Settings.view.xml
+++ b/webapp/view/Settings.view.xml
@@ -2,8 +2,8 @@
 	controllerName="de.mangels.controller.Settings">
 	<m:Page id="page" title="{i18n>settingstitle}" showNavButton="true" navButtonPress="onNavButtonPressed" backgroundDesign="Solid">
 		<m:headerContent>
-			<m:ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" class="sapUiSmallMarginBottom" tooltip="{i18n>fullscreen}"/>
-			<m:Image decorative="false" densityAware="false" press="handleImage3Press" src="images/sonne.png" width="3em">
+			<m:ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" tooltip="{i18n>fullscreen}"/>
+			<m:Image decorative="false" densityAware="false" press="handleImage3Press" src="images/Solar_energy_icon.png" width="3em">
 				<m:layoutData>
 					<m:FlexItemData growFactor="1"/>
 				</m:layoutData>
