--- a/webapp/view/Aktuell.view.xml
+++ b/webapp/view/Aktuell.view.xml
@@ -3,8 +3,8 @@
 	<m:Page title="{i18n>aktuelltitle}" showNavButton="true" navButtonPress="onNavButtonPressed" backgroundDesign="Solid">
 		<m:headerContent>
 			<m:Button icon="sap-icon://action-settings" press="handleSettings" tooltip="{i18n>settings}"/>
-			<m:ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" class="sapUiSmallMarginBottom" tooltip="{i18n>fullscreen}"/>
-			<m:Image decorative="false" densityAware="false" press="handleImage3Press" src="images/sonne.png" width="3em">
+			<m:ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" tooltip="{i18n>fullscreen}"/>
+			<m:Image decorative="false" densityAware="false" press="handleImage3Press" src="images/Solar_energy_icon.png" width="3em">
 				<m:layoutData>
 					<m:FlexItemData growFactor="1"/>
 				</m:layoutData>
