--- a/webapp/view/Information.view.xml
+++ b/webapp/view/Information.view.xml
@@ -1,8 +1,8 @@
 <mvc:View controllerName="de.mangels.controller.Information" xmlns:l="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m">
 	<Page title="{i18n>informationtitle}" showNavButton="true" navButtonPress="onNavButtonPressed" backgroundDesign="Solid">
 		<headerContent>
-			<ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" class="sapUiSmallMarginBottom" tooltip="{i18n>fullscreen}"/>
-			<Image decorative="false" densityAware="false" press="handleImage3Press" src="images/sonne.png" width="3em">
+			<ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" tooltip="{i18n>fullscreen}"/>
+			<Image decorative="false" densityAware="false" press="handleImage3Press" src="images/Solar_energy_icon.png" width="3em">
 				<layoutData>
 					<FlexItemData growFactor="1"/>
 				</layoutData>
