--- a/webapp/view/Topvalues.view.xml
+++ b/webapp/view/Topvalues.view.xml
@@ -2,8 +2,8 @@
 	xmlns:tnt="sap.tnt">
 	<Page title="{i18n>topvaluestitle}" showNavButton="true" navButtonPress="onNavButtonPressed" backgroundDesign="Solid">
 		<headerContent>
-			<ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" class="sapUiSmallMarginBottom" tooltip="{i18n>fullscreen}"/>
-			<Image decorative="false" densityAware="false" press="handleImage3Press" src="images/sonne.png" width="3em">
+			<ToggleButton icon="sap-icon://full-screen" press="handleFullscreen" tooltip="{i18n>fullscreen}"/>
+			<Image decorative="false" densityAware="false" press="handleImage3Press" src="images/Solar_energy_icon.png" width="3em">
 				<layoutData>
 					<FlexItemData growFactor="1"/>
 				</layoutData>
